--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,23 @@ article:hover .card {
   filter: brightness(60%);
 }
 
+#bann-title {
+  padding-top: 10vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 25vh;
+  background-image: url('../img/bg4.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  filter: grayscale(100%);
+}
+
+#bann-title article h2 {
+  color: white;
+}
+
 h2.even-bigger {
   font-size: 350%;
   font-weight: 700;
@@ -136,8 +153,12 @@ h2.even-bigger {
   cursor: pointer;
 }
 
+button.btn-prom {
+
+    margin-top: 20px !important;
+}
+
 .btn-prom {
-  margin-top: 20px !important;
   background: linear-gradient(45deg, rgb(235, 25, 25), rgb(233, 8, 170));
   border-radius: 3px;
   color: white;
