--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
   max-width: 100%;
 }
 
+body, html {
+  background-color: rgb(249, 249, 249);
+}
+
 h1, h2, h3, h4 {
   font-weight: 500;
 }
@@ -151,7 +155,17 @@ article:hover .card {
   color: white;
 }
 
-h2.even-bigger {
+h2.bigger, h3.bigger, h4.bigger {
+  font-size: 250%;
+  font-weight: 700;
+}
+
+p.bigger {
+  font-size: 150%;
+  font-weight: 700;
+}
+
+h2.even-bigger, h3.even-bigger, h4.even-bigger {
   font-size: 350%;
   font-weight: 700;
   letter-spacing: 5px;
@@ -179,8 +193,12 @@ button.btn-prom {
   -webkit-transition: .4s ease-out;
 }
 
-.btn-prom:hover {
-box-shadow: 0px 1px 6px 2px rgba(0,0,0,.5)
+.btn-prom.btn-anim {
+  margin: 0;
+}
+
+.btn-anim:hover {
+  box-shadow: 0px 1px 6px 2px rgba(0,0,0,.5)
 }
 
 .material-icons.loggin, .material-icons.sc {
@@ -194,4 +212,68 @@ box-shadow: 0px 1px 6px 2px rgba(0,0,0,.5)
   text-align: center;
   padding-top: 10px;
   padding-bottom: 30px;
+}
+
+.product {
+  min-height: 60vh;
+  margin-bottom: 30px;
+  box-shadow: 0px 2px 10px rgba(0,0,0,.5);
+  border-radius: 3px;
+  overflow: hidden;
+  background-color: white;
+  padding: 0;
+}
+
+  .product-img {
+    background-color: rgb(27, 22, 26);
+    padding: 0;
+  }
+
+  .product-img img {
+    height: 60vh;
+    width: 100%;
+  }
+
+  .product-data {
+    background-color: rgb(27, 22, 26);
+    padding: 15px 25px;
+  }
+    .product-data .product-name,.product-data .product-description {
+      text-align: left;
+      color: white;
+    }
+    .product-data .product-description {
+      padding-top: 20px;
+      font-size: 95%;
+    }
+
+  .product-extra {
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+    .product-ofer, .product-props, .product-price {
+      padding: 20px;
+      margin: 0;
+    }
+
+  .product-price {
+    background-color: white;
+    position: absolute;
+    width: 90%;
+    border-radius: 3px;
+    top: -30%;
+  }
+
+.shadow {
+  box-shadow: 0px 2px 15px rgba(0,0,0,.45);
+}
+
+.relative {
+  position: relative;
+  margin: 0;
+}
+
+.padding-top {
+  padding-top: 20px;
 }
