--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ header section.banner {
   padding-top: 10vh;
   overflow: hidden;
   display: flex;
-  background-image: url('../img/bg1.jpg');
+  background-image: url('../img/python.jpg');
   background-size: cover;
   align-items: center;
   justify-content: center;
@@ -186,7 +186,8 @@ button.btn-prom {
 }
 
 .btn-prom {
-  background: linear-gradient(45deg, rgb(235, 25, 25), rgb(233, 8, 170));
+  /*background: linear-gradient(45deg, rgb(235, 25, 25), rgb(233, 8, 170));*/
+  background: linear-gradient(45deg, #4f80e1, #18cdca);
   border-radius: 3px;
   color: white;
   box-shadow: 0px 1px 3px rgba(0,0,0,.5);
